clusters/cl01tl/manifests/listenarr/Deployment-listenarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listenarr
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: listenarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: listenarr
    helm.sh/chart: listenarr-4.5.0
  namespace: listenarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: listenarr
      app.kubernetes.io/instance: listenarr
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: listenarr
        app.kubernetes.io/name: listenarr
    spec:
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: LISTENARR_PUBLIC_URL
              value: https://listenarr.alexlebens.net
          image: therobbiedavis/listenarr:canary-0.2.35
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - mountPath: /app/config
              name: config
            - mountPath: /data
              name: media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: listenarr
        - name: media
          persistentVolumeClaim:
            claimName: listenarr-nfs-storage
