clusters/cl01tl/manifests/listenarr/Service-listenarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: listenarr
  labels:
    app.kubernetes.io/instance: listenarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: listenarr
    app.kubernetes.io/service: listenarr
    helm.sh/chart: listenarr-4.5.0
  namespace: listenarr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: listenarr
    app.kubernetes.io/name: listenarr
