clusters/cl01tl/manifests/listenarr/HTTPRoute-http-route-listenarr.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-listenarr
  namespace: listenarr
  labels:
    app.kubernetes.io/name: http-route-listenarr
    app.kubernetes.io/instance: listenarr
    app.kubernetes.io/part-of: listenarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - listenarr.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: listenarr
          port: 80
          weight: 100
