clusters/cl01tl/manifests/listenarr/HTTPRoute-listenarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listenarr
  labels:
    app.kubernetes.io/instance: listenarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: listenarr
    helm.sh/chart: listenarr-4.6.0
  namespace: listenarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "listenarr.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: listenarr
          namespace: listenarr
          port: 80
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
